# QMidi

./: CMakeLists.txt  qmidiin.cpp  qmidiin.h
